--- a/.gitlab/container_build/docker_linux.yml
+++ b/.gitlab/container_build/docker_linux.yml
@@ -42,27 +42,38 @@
     - !reference [.login_to_docker_readonly]
     # Build image, use target none label to avoid replication
     - |-
-      docker buildx build --push --pull --platform linux/$ARCH \
-        ${CACHE_SOURCE} \
-        ${CACHE_TO} \
-        ${DOCKER_NO_CACHE} \
-        --build-arg AGENT_BASE_IMAGE_TAG=${AGENT_BASE_IMAGE_TAG} \
-        --build-arg CIBUILD=true \
-        --build-arg GENERAL_ARTIFACTS_CACHE_BUCKET_URL=${GENERAL_ARTIFACTS_CACHE_BUCKET_URL} \
-        $BUILD_ARG \
-        --build-arg DD_GIT_REPOSITORY_URL=https://github.com/DataDog/datadog-agent \
-        --build-arg DD_GIT_COMMIT_SHA=${CI_COMMIT_SHA} \
-        ${EXTRA_BUILD_CONTEXT} \
-        --file $BUILD_CONTEXT/Dockerfile \
-        --tag ${TARGET_TAG} \
-        --label "org.opencontainers.image.created=$(date --rfc-3339=seconds)" \
-        --label "org.opencontainers.image.authors=Datadog <package@datadoghq.com>" \
-        --label "org.opencontainers.image.source=https://github.com/DataDog/datadog-agent" \
-        --label "org.opencontainers.image.version=$(dda inv agent.version)" \
-        --label "org.opencontainers.image.revision=${CI_COMMIT_SHA}" \
-        --label "org.opencontainers.image.vendor=Datadog, Inc." \
-        --label "target=none" \
-        $BUILD_CONTEXT
+      n=0
+      until [ $n -ge 3 ]
+      do
+        docker buildx build --push --pull --platform linux/$ARCH \
+          ${CACHE_SOURCE} \
+          ${CACHE_TO} \
+          ${DOCKER_NO_CACHE} \
+          --build-arg AGENT_BASE_IMAGE_TAG=${AGENT_BASE_IMAGE_TAG} \
+          --build-arg CIBUILD=true \
+          --build-arg GENERAL_ARTIFACTS_CACHE_BUCKET_URL=${GENERAL_ARTIFACTS_CACHE_BUCKET_URL} \
+          $BUILD_ARG \
+          --build-arg DD_GIT_REPOSITORY_URL=https://github.com/DataDog/datadog-agent \
+          --build-arg DD_GIT_COMMIT_SHA=${CI_COMMIT_SHA} \
+          ${EXTRA_BUILD_CONTEXT} \
+          --file $BUILD_CONTEXT/Dockerfile \
+          --tag ${TARGET_TAG} \
+          --label "org.opencontainers.image.created=$(date --rfc-3339=seconds)" \
+          --label "org.opencontainers.image.authors=Datadog <package@datadoghq.com>" \
+          --label "org.opencontainers.image.source=https://github.com/DataDog/datadog-agent" \
+          --label "org.opencontainers.image.version=$(dda inv agent.version)" \
+          --label "org.opencontainers.image.revision=${CI_COMMIT_SHA}" \
+          --label "org.opencontainers.image.vendor=Datadog, Inc." \
+          --label "target=none" \
+          $BUILD_CONTEXT && break
+        n=$((n+1))
+        echo "docker buildx build failed. Retrying in 10 seconds... ($n/3)"
+        sleep 10
+      done
+      if [ $n -eq 3 ]; then
+        echo "docker buildx build failed after 3 attempts."
+        exit 1
+      fi
     - FLATTEN_IMAGE=${FLATTEN_IMAGE:-true}
     # Squash image if FLATTEN_IMAGE is true
     - |
