remove debug agent.exe from windows container

--- a/.gitlab/container_build/docker_windows.yml
+++ b/.gitlab/container_build/docker_windows.yml
@@ -23,6 +23,9 @@
     - Expand-Archive datadog-agent-latest.amd64.zip
     - Remove-Item datadog-agent-latest.amd64.zip
     - Get-ChildItem -Path datadog-agent-* | Rename-Item -NewName "Datadog Agent"
+    # Omnibus uses a slightly different path than the actual install
+    # TODO: This overwrites an extra agent.exe, we should also remove it from the zip
+    - mv "Datadog Agent\bin\agent\agent.exe" "Datadog Agent\bin\agent.exe"
     - popd
 
     - get-childitem ${BUILD_CONTEXT}
