--- a/.gitlab/source_test/windows.yml
+++ b/.gitlab/source_test/windows.yml
@@ -6,7 +6,7 @@
     - !reference [.except_disable_unit_tests]
     - !reference [.fast_on_dev_branch_only]
   needs: ["go_deps", "go_tools_deps"]
-  extends: 
+  extends:
     - .windows_docker_default
   script:
     - $ErrorActionPreference = "Stop"
@@ -49,7 +49,7 @@
       powershell.exe -c "c:\mnt\tasks\winbuildscripts\Invoke-UnitTests.ps1 -BuildOutOfSource 1 -CheckGoVersion 1 -InstallDeps 1 -UploadCoverage 1 -UploadTestResults 1"
     - If ($lastExitCode -ne "0") { exit "$lastExitCode" }
   variables:
-    TEST_OUTPUT_FILE: test_output.json
+    TEST_OUTPUT_FILE: e2e_test_output.json
   artifacts:
     expire_in: 2 weeks
     when: always
