CI: replace hardcoded omnibus/pkg by equivalent $OMNIBUS_PACKAGE_DIR

--- a/.gitlab/choco_build/choco_build.yml
+++ b/.gitlab/choco_build/choco_build.yml
@@ -29,7 +29,7 @@
   artifacts:
     expire_in: 2 weeks
     paths:
-      - omnibus/pkg
+      - $OMNIBUS_PACKAGE_DIR/
   # Sometimes Chocolatey is flakey
   retry: 2
 
