--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -36,8 +36,8 @@ agent_dmg-x64-a7:
   artifacts:
     expire_in: 2 weeks
     paths:
-      - omnibus/pkg/*.dmg
-      - omnibus/pkg/version-manifest.json
+      - $OMNIBUS_PACKAGE_DIR/*.dmg
+      - $OMNIBUS_PACKAGE_DIR/version-manifest.json
   variables:
     SIGN: true
     KEYCHAIN_NAME: "build.keychain"
