--- a/.gitlab/package_build/installer.yml
+++ b/.gitlab/package_build/installer.yml
@@ -219,8 +219,8 @@ windows-installer-amd64:
   script:
     - $ErrorActionPreference = 'Stop'
     - '$_instance_id = (iwr  -UseBasicParsing http://169.254.169.254/latest/meta-data/instance-id).content ; Write-Host "Running on instance $($_instance_id)"'
-    - if (Test-Path omnibus\pkg) { remove-item -recurse -force omnibus\pkg }
-    - mkdir omnibus\pkg
+    - if (Test-Path $OMNIBUS_PACKAGE_DIR) { remove-item -recurse -force $OMNIBUS_PACKAGE_DIR }
+    - mkdir $OMNIBUS_PACKAGE_DIR
     - >
       docker run --rm
       -m 8192M
