--- a/.gitlab/package_build/windows.yml
+++ b/.gitlab/package_build/windows.yml
@@ -6,8 +6,8 @@
   script:
     - $ErrorActionPreference = 'Stop'
     - '$_instance_id = (iwr  -UseBasicParsing http://169.254.169.254/latest/meta-data/instance-id).content ; Write-Host "Running on instance $($_instance_id)"'
-    - if (Test-Path omnibus\pkg) { remove-item -recurse -force omnibus\pkg }
-    - mkdir omnibus\pkg
+    - if (Test-Path $OMNIBUS_PACKAGE_DIR) { remove-item -recurse -force $OMNIBUS_PACKAGE_DIR }
+    - mkdir $OMNIBUS_PACKAGE_DIR
     - >
       docker run --rm
       -m 24576M
@@ -41,7 +41,7 @@
       ${WINBUILDIMAGE}
       powershell -C "c:\mnt\tasks\winbuildscripts\Build-AgentPackages.ps1 -BuildOutOfSource 1 -InstallDeps 1 -CheckGoVersion 1 -BuildUpgrade 1"
     - If ($lastExitCode -ne "0") { throw "Previous command returned $lastExitCode" }
-    - get-childitem omnibus\pkg
+    - get-childitem $OMNIBUS_PACKAGE_DIR
     - !reference [.upload_sbom_artifacts_windows]
   after_script:
     - '$_instance_id = (iwr  -UseBasicParsing http://169.254.169.254/latest/meta-data/instance-id).content ; Write-Host "Running on instance $($_instance_id)"'
@@ -89,8 +89,8 @@ windows_zip_agent_binaries_x64-a7:
   script:
     - $ErrorActionPreference = "Stop"
     - '$_instance_id = (iwr  -UseBasicParsing http://169.254.169.254/latest/meta-data/instance-id).content ; Write-Host "Running on instance $($_instance_id)"'
-    - if (Test-Path omnibus\pkg) { remove-item -recurse -force omnibus\pkg }
-    - mkdir omnibus\pkg
+    - if (Test-Path $OMNIBUS_PACKAGE_DIR) { remove-item -recurse -force $OMNIBUS_PACKAGE_DIR }
+    - mkdir $OMNIBUS_PACKAGE_DIR
     - >
       docker run --rm
       -m 8192M
@@ -117,7 +117,7 @@ windows_zip_agent_binaries_x64-a7:
       ${WINBUILDIMAGE}
       powershell -C "c:\mnt\tasks\winbuildscripts\Build-OmnibusTarget.ps1 -BuildOutOfSource 1 -InstallDeps 1 -CheckGoVersion 1"
     - If ($lastExitCode -ne "0") { throw "Previous command returned $lastExitCode" }
-    - get-childitem omnibus\pkg
+    - get-childitem $OMNIBUS_PACKAGE_DIR
     - !reference [.upload_sbom_artifacts_windows]
   artifacts:
     expire_in: 2 weeks
